2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-net-monitor.c: (ephy_net_monitor_set_net_status),
	(notify_network_managed_cb):

	Store the detected network status even if we're not active.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* data/epiphany.schemas.in:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	* lib/ephy-prefs.h:
	* src/Makefile.am:
	* src/ephy-net-monitor.c:
	* src/ephy-net-monitor.h:
	* src/ephy-shell.c: (ephy_shell_sync_network_status),
	(impl_get_embed_single), (ephy_shell_dispose),
	(ephy_shell_get_net_monitor), (_ephy_shell_create_instance),
	(_ephy_shell_startup):
	* src/ephy-shell.h:

	libnm-glib be-gone! Use NetworkManager directly via DBUS, by
	importing the excellent net-monitor extension directly into
	Epiphany. Code by Jean-François Rameau.

2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks-ui.c
	
	Reverted change which made 'add bookmark' and 'edit bookmark'
	use-cases have exactly the same dialog.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	Don't leak the option context.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-topic-action.c: (drag_data_received_cb),
	(create_tool_item), (ephy_topic_action_sync_label), (get_popup),
	(erase_popup), (child_changed_cb), (child_removed_cb),
	(menu_init_cb), (button_deactivate_cb), (button_toggled_cb),
	(button_release_cb), (button_press_cb), (connect_proxy),
	(ephy_topic_action_updated), (ephy_topic_action_get_topic),
	(ephy_topic_action_set_topic), (ephy_topic_action_set_property),
	(ephy_topic_action_get_property), (ephy_topic_action_init),
	(ephy_topic_action_get_type), (ephy_topic_action_new):

	Small cleanups.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-gecko-1-8.js:
	* embed/mozilla/mozilla-embed-single.cpp:

	Set the "browser.display.use_system_colors" pref on gecko 1.8,