@@ -1,5 +1,15 @@
 2006-01-25  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_constructor):
+
+	Add transient window to window group.,
+
+	* src/languages.h:
+
+	Add licence header.
+
+2006-01-25  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/ephy-net-monitor.c: (ephy_net_monitor_set_net_status),
 	(notify_network_managed_cb):
 
